# python-learning-dio

./: *exceptions.py
00-Praticando/01-sistema-notas_alunos/: grades_bib.py
00-Praticando/02-sistema-banco/: conta_corrente.py  funcoes-banco.py  funcoes_conta.py  main.py
00-Projetos/00-desafios/: 01-formatacao_de_texto.py  02-identificador_categoria.py  03-mensagem-robo.py  (+1 more)
01 - Introducao/: 02-conversao.py
01-Introducao/: 01-variaveis_constantes.py  03-input.py
02 - Strings/: 01-basico.py  02-f-string.py  04-multiplas_linhas.py
02-Strings/: 03-fatiamento.py
03-Listas/: 02-manipulando.py  04-metodos.py
04-Tuplas/: tuplas.py
05-Dicionarios/: 03-for_dic.py  04-dict.py
06-Funcoes/: 01-basico.py  02-parametros.py  03-args_e_kwargs.py  04-parametros_hibridos.py  05-funcao_parametro.py
07-decoradores/: 01-decorador_simples.py  02-decorador_com_argumentos.py  03-decorador_com_retorno.py  03.1-nome_das_funcoes_indep_dos_decoradores.py
08-iteradores e geradores/: 01-iterador.py  02-gerador.py
10-POO/: 03-heranca_simples.py  04-heranca_multipla.py  05-encapsulamento.py  06-propiedades.py  07-propriedades_pessoa.py  08-metodos_classe_e_estaticos.py  09-abc_base.py
11-manimpulacao-arquivos/: 01-ler_arquivo.py  02-escrever_arquivo.py  03-manipulando_diretorios.py  04-tratamento-de-excessoes.py  teste-r.txt  teste-w.txt
12-API-FastAPI/: tochat.txt
12-API-FastAPI/01-dio-blog/: main.py  pyproject.toml
12-API-FastAPI/01-dio-blog/controllers/: post.py
12-API-FastAPI/01-dio-blog/schemas/: post.py
12-API-FastAPI/01-dio-blog/views/: post.py
(+31 files in other folders)
